# sqredir

./: .gitignore  CMakeLists.txt  Makefile  README.md  blocklist.c  blocklist.cpp  blocklist.h  match.c  match.h  sqredir.c  sqredir.conf.dist  sqredir.cpp  version.h.in
